--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS here -->
     <link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/container.css">
+	<link rel="stylesheet" href="css/banner.css">
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	
@@ -56,6 +58,11 @@
 	</header>
 	
 	
+	
+	
+	
+	<!---------------bottom nav--------------- -->
+	
 	<bottom id="bottom" align="center" class="bottom_nav_align">
 		<div align="center" class="bottom_nav float_top_items">
 				<ul>
@@ -72,44 +79,47 @@
 	
 	
 	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	<!----- main container------>
+	
+	
+	
+	
+	
+	
 	<br>
 	<br>
 	<br>
+	<br>
+	<div  class="container">	
+		<br>
+		
+		
+		
+		
+	
+	<div align="center" class="banner_container"><div class="banner"></div></div>
+		
+		
+		
+		
+		
+	</div>
+	
 
-	<br>
-	<br>
-	
-	<div class="container container0">	
-	</div>
-	
-	<br>
-	
-	<div class="container container0">
-	</div>
-
-	
-	<br>
-	
-	<div class="container container0">	
-	</div>
-	
-	<br>
-	
-	<div class="container container0">
-	</div>
-	
-	<br>
-	
-	<div class="container container0">	
-	</div>
-	
-	<br>
-	
-	<div class="container container0">
-	</div>
-	
-	<br>
-	<br>
 	
 	
 	
