--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 			<div class="top_social float_top_item">
 			<a href="https://facebook.com/tfsonsonlineshop" target="_blank"><i class="fb fa fa-facebook-square"></i></a>
 			
-			<a href="https://wa.me/01842394106" target="_blank"><i class= "wt fa fa-whatsapp"></i></a>
-			<a href="mailto: nazmulgazi75@gmail.com? subject = massage " target="_blank"><i class="ma fa fa-envelope"></i></a>
+			<a href="https://wa.me/+8801842394106" target="_blank"><i class= "wt fa fa-whatsapp"></i></a>
+			<a href="mailto: tfsonscustomercare@gmail.com? subject = massage " target="_blank"><i class="ma fa fa-envelope"></i></a>
 			<a href="https://youtube.com/channel/UCGNIbAGZm6UHcfSMgtjYg3g" target="_blank"><i class="yt fa fa-youtube-play"></i></a>
 			</div>
 			
@@ -96,27 +96,32 @@
 	<!----- main container------>
 	
 	
-	
-	
-	
-	
 	<br>
 	<br>
 	<br>
 	<br>
-	<div  class="container">	
-		<br>
-		
-		
-		
-		
+	<div align="center" class="container"><br>	
+	<!------------------------banner------------------------->
 	
-	<div align="center" class="banner_container"><div class="banner"></div></div>
+	<div class="banner_container"><div class="banner"></div></div><br><br>
+		
+	<!------------------------sub container------------------------->
+	<div align="center" class="sub_container">
+	
+	<!------------------------About------------------------->
+	<div align="center" class="about_home">
+		<h1 align="center"> About us </h2>
+		<div class="devider"></div>
+		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+		<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in.</p>		
+	<div align="center" class="btn_a"><a href="#" class="btn hero-btn"> <font color="white">Read More</font></a></div>
+	</div>
 		
 		
 		
 		
 		
+	</div>				
 	</div>
 	
 
@@ -145,7 +150,11 @@
 	
 	
 	
+	<!----- main container------>
+	<footer class="footer_container">
+		
 	
+	</footer>
 	
 	
 	
