--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta name="description" content="পছন্দ আপনার দায়িত্ব আমাদের">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS here -->
+	
     <link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/container.css">
 	<link rel="stylesheet" href="css/banner.css">
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 	
 </head>
 
@@ -108,15 +110,39 @@
 	<!------------------------sub container------------------------->
 	<div align="center" class="sub_container">
 	
-	<!------------------------About------------------------->
+	<!-------------------------------About---------------------------->
 	<div align="center" class="about_home">
+		
 		<h1 align="center"> About us </h2>
 		<div class="devider"></div>
-		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
-		<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in.</p>		
-	<div align="center" class="btn_a"><a href="#" class="btn hero-btn"> <font color="white">Read More</font></a></div>
-	</div>
+		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
 		
+	<div align="center" class="btn_a"><a href="#" class="btn hero-btn"> <font color="white">Read More</font></a></div>
+	</div><br><br>
+		
+		
+		
+		<div class="devider_silver"></div>
+	<!---------------------------Service---------------------------->
+		
+		<div align="center" class="Service_home">
+		<h1 align="center"> Our Services </h2>
+		<div class="devider"></div>
+			
+		<!---------------------------Service1---------------------------->
+			<div class="service1 service_div">
+				<div class="service_inner">
+					<i class="fas fa-clock"></i>
+					<h2>TFsons Furniture</h2>
+					<p1>Its have manufacturer factory, Branches. Its take order for requirement production, Distribution,  Direct sell & wholesell</p1>
+					<div class="button2">Read More</div>
+				</div>
+			</div>
+			
+			
+				
+	<div align="center" class="btn_a"><a href="#" class="btn hero-btn"> <font color="white">All Services</font></a></div>
+	</div>
 		
 		
 		
@@ -153,7 +179,12 @@
 	<!----- main container------>
 	<footer class="footer_container">
 		
-	
+		
+		<div class="address"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3645.1357402729823!2d90.38714570467404!3d23.99098332196133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755dbaec1d28739%3A0xbfd289dface9f54!2sTFsons%20Online%20Shop.com!5e0!3m2!1sen!2sbd!4v1619452993813!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> </div>
+		
+		
+		<div class="map"></div>
+
 	</footer>
 	
 	
