--- a/index.html
+++ b/index.html
@@ -180,10 +180,18 @@
 	<footer class="footer_container">
 		
 		
-		<div class="address"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3645.1357402729823!2d90.38714570467404!3d23.99098332196133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755dbaec1d28739%3A0xbfd289dface9f54!2sTFsons%20Online%20Shop.com!5e0!3m2!1sen!2sbd!4v1619452993813!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> </div>
+		<div class="map"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3645.1357402729823!2d90.38714570467404!3d23.99098332196133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755dbaec1d28739%3A0xbfd289dface9f54!2sTFsons%20Online%20Shop.com!5e0!3m2!1sen!2sbd!4v1619452993813!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> </div>
 		
 		
-		<div class="map"></div>
+		<div class="address">
+		<div class="address1">
+			Corporate Office :-
+			Address:-381 Nur Mahal, Sundarban Courier Service Building (3rd floor),Joydebpur Road, Chandana Chowrasta,Gazipur 
+			E-Mail:- tfsonscustomercare@gmail.com 
+			Phone:- 01842394106
+		</div>
+		
+		</div>
 
 	</footer>
 	
