--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	
     <link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/container.css">
+	<link rel="stylesheet" href="css/footer.css">
 	<link rel="stylesheet" href="css/banner.css">
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -147,53 +148,79 @@
 		
 		
 		
-	</div>				
 	</div>
-	
-
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-
-	
-	
-	
-	
-	
-	<!----- main container------>
-	<footer class="footer_container">
 		
 		
-		<div class="map"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3645.1357402729823!2d90.38714570467404!3d23.99098332196133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755dbaec1d28739%3A0xbfd289dface9f54!2sTFsons%20Online%20Shop.com!5e0!3m2!1sen!2sbd!4v1619452993813!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> </div>
 		
 		
+	<!----- Footer container------>
+	<div align="center" class="footer_container"><div align="center">
+		
+		
+		
+		<div align="center" class="all_address all_address_div">
+			
+			
 		<div class="address">
-		<div class="address1">
-			Corporate Office :-
-			Address:-381 Nur Mahal, Sundarban Courier Service Building (3rd floor),Joydebpur Road, Chandana Chowrasta,Gazipur 
-			E-Mail:- tfsonscustomercare@gmail.com 
-			Phone:- 01842394106
-		</div>
+		   <strong> Corporate Office </strong>
+			<br><br><div class="small_devider"></div><br>
+			
+		   <i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp; 381 Nur Mahal, Sundarban Courier Service Building (3rd-floor), Joydebpur Road, Chandana Chowrasta, Gazipur.<br>
+			<enter style="margin-bottom: 20px;"></enter>
+		   <i class="ma fa fa-envelope"></i> &nbsp; tfsonscustomercare@gmail.com<br>
+			<i class="ma fa fa-phone"></i> &nbsp; 01842394106
+        </div>
+			
+			
+			
+			<div class="address">
+		   <strong> Industrial Headquarter-01 </strong>
+			<br><br><div class="small_devider"></div><br>
+			
+		   <i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp; TFsons Building, Fulbaria, Durgapur, Kapashia, Gazipur.<br>
+			<enter style="margin-bottom: 20px;"></enter>
+		   <i class="ma fa fa-envelope"></i> &nbsp; tfsonscustomercare@gmail.com<br>
+			<i class="ma fa fa-phone"></i> &nbsp; 01624424538
+        </div>
 		
-		</div>
+					
+		</div> <!-----all address div end-->
+		
+		
+		<div align="center" class="map all_address"> <iframe class="map_iframe" src="https://www .google.com/maps/embed?pb=!1m18!1m12!1m3!1d3645.1357402729823!2d90.38714570467404!3d23.99098332196133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755dbaec1d28739%3A0xbfd289dface9f54!2sTFsons%20Online%20Shop.com!5e0!3m2!1sen!2sbd!4v1619452993813!5m2!1sen!2sbd" " allowfullscreen="" loading="lazy"></iframe> </div>
+			
+			
+		
+	</div></div> <!-----footer div end-->
+	
+		
+	</div> <!-----sub container div end-->
+	
 
-	</footer>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+
+	
+	
+	
+	
 	
 	
 	
