--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 		   <i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp; 381 Nur Mahal, Sundarban Courier Service Building (3rd-floor), Joydebpur Road, Chandana Chowrasta, Gazipur.<br>
 			<enter style="margin-bottom: 20px;"></enter>
 		   <i class="ma fa fa-envelope"></i> &nbsp; tfsonscustomercare@gmail.com<br>
-			<i class="ma fa fa-phone"></i> &nbsp; 01842394106
+			<i class="ma fa fa-phone"></i> &nbsp; +8801842394106
         </div>
 			
 			
@@ -180,7 +180,7 @@
 		   <i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp; TFsons Building, Fulbaria, Durgapur, Kapashia, Gazipur.<br>
 			<enter style="margin-bottom: 20px;"></enter>
 		   <i class="ma fa fa-envelope"></i> &nbsp; tfsonscustomercare@gmail.com<br>
-			<i class="ma fa fa-phone"></i> &nbsp; 01624424538
+			<i class="ma fa fa-phone"></i> &nbsp; +8801624424538
         </div>
 		
 					
