--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 		</div> <!-----all address div end-->
 		
 		
-		<div align="center" class="map all_address"> <iframe class="map_iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3645.1357402729823!2d90.38714570467404!3d23.99098332196133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755dbaec1d28739%3A0xbfd289dface9f54!2sTFsons%20Online%20Shop.com!5e0!3m2!1sen!2sbd!4v1619452993813!5m2!1sen!2sbd" " allowfullscreen="" loading="lazy"></iframe> </div>
+		<div align="center" class="map all_address"> <iframe class="map_iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3645.1357402729823!2d90.38714570467404!3d23.99098332196133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755dbaec1d28739%3A0xbfd289dface9f54!2sTFsons%20Online%20Shop.com!5e0!3m2!1sen!2sbd!4v1619452993813!5m2!1sen!2sbd" allowfullscreen="" loading="lazy"></iframe> </div> <br><br>
 			
 			
 		
