--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 		   <strong> Corporate Office </strong>
 			<br><br><div class="small_devider"></div><br>
 			
-		   <i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp; 381 Nur Mahal, Sundarban Courier Service Building (3rd-floor), Joydebpur Road, Chandana Chowrasta, Gazipur.<br>
+		   <i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp; 381 Nur Mahal, Sundarban Courier Service Building (3rd-floor), Joydebpur Road, Chandana Chowrasta, Gazipur, Dhaka, Bangladesh.<br>
 			<enter style="margin-bottom: 20px;"></enter>
 		   <i class="ma fa fa-envelope"></i> &nbsp; tfsonscustomercare@gmail.com<br>
 			<i class="ma fa fa-phone"></i> &nbsp; +8801842394106
@@ -176,7 +176,7 @@
 		   <strong> Industrial Headquarter-01 </strong>
 			<br><br><div class="small_devider"></div><br>
 			
-		   <i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp; TFsons Building, Fulbaria, Durgapur, Kapashia, Gazipur.<br>
+		   <i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp; TFsons Building, Fulbaria, Durgapur, Kapashia, Gazipur, Dhaka, Bangladesh.<br>
 			<enter style="margin-bottom: 20px;"></enter>
 		   <i class="ma fa fa-envelope"></i> &nbsp; tfsonscustomercare@gmail.com<br>
 			<i class="ma fa fa-phone"></i> &nbsp; +8801624424538
