--- a/index.html
+++ b/index.html
@@ -111,14 +111,7 @@
 	<div align="center" class="sub_container">
 	
 	<!-------------------------------About---------------------------->
-	<div align="center" class="about_home">
-		
-		<h1 align="center"> About us </h2>
-		<div class="devider"></div>
-		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
-		
-	<div align="center" class="btn_a"><a href="#" class="btn hero-btn"> <font color="white">Read More</font></a></div>
-	</div><br><br>
+	
 		
 		
 		
@@ -126,18 +119,60 @@
 	<!---------------------------Service---------------------------->
 		
 		<div align="center" class="Service_home">
-		<h1 align="center"> Our Services </h2>
+		<h1 align="center"> Our Services </h1>
 		<div class="devider"></div>
 			
 		<!---------------------------Service1---------------------------->
 			<div class="service1 service_div">
 				<div class="service_inner">
-					<i class="fas fa-couch"></i>
+					<i class="fa fa-home"></i>
 					<h2>TFsons Furniture</h2>
 					<p1>Its have manufacturer factory, Branches. Its take order for requirement production, Distribution,  Direct sell & wholesell</p1>
 					<div class="button2">Read More</div>
 				</div>
 			</div>
+			
+			<div class="service1 service_div">
+				<div class="service_inner">
+					<i class="fa fa-home"></i>
+					<h2>TFsons Furniture</h2>
+					<p1>Its have manufacturer factory, Branches. Its take order for requirement production, Distribution,  Direct sell & wholesell</p1>
+					<div class="button2">Read More</div>
+				</div>
+			</div>
+			
+			
+			<div class="service1 service_div">
+				<div class="service_inner">
+					<i class="fa fa-home"></i>
+					<h2>TFsons Furniture</h2>
+					<p1>Its have manufacturer factory, Branches. Its take order for requirement production, Distribution,  Direct sell & wholesell</p1>
+					<div class="button2">Read More</div>
+				</div>
+			</div>
+			
+			
+			<div class="service1 service_div">
+				<div class="service_inner">
+					<i class="fa fa-home"></i>
+					<h2>TFsons Furniture</h2>
+					<p1>Its have manufacturer factory, Branches. Its take order for requirement production, Distribution,  Direct sell & wholesell</p1>
+					<div class="button2">Read More</div>
+				</div>
+			</div>
+			
+			
+			<div class="service1 service_div">
+				<div class="service_inner">
+					<i class="fa fa-home"></i>
+					<h2>TFsons Furniture</h2>
+					<p1>Its have manufacturer factory, Branches. Its take order for requirement production, Distribution,  Direct sell & wholesell</p1>
+					<div class="button2">Read More</div>
+				</div>
+			</div>
+			
+			<br>
+			<br>
 			
 			
 				
@@ -147,11 +182,27 @@
 		
 		
 		
-	</div>
 		
 		
 		
 		
+		
+		
+		
+		
+		
+		<div align="center" class="about_home">
+		
+		<h1 align="center"> About us </h2>
+		<div class="devider"></div>
+		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
+		
+	<div align="center" class="btn_a"><a href="#" class="btn hero-btn"> <font color="white">Read More</font></a></div>
+	</div><br><br>
+	
+		
+		
+	</div>		
 	<!----- Footer container------>
 	<div align="center" class="footer_container"><div align="center">
 		
