--- a/index.html
+++ b/index.html
@@ -310,6 +310,17 @@
 		<div align="center" class="map all_address"> <iframe class="map_iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3645.1357402729823!2d90.38714570467404!3d23.99098332196133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755dbaec1d28739%3A0xbfd289dface9f54!2sTFsons%20Online%20Shop.com!5e0!3m2!1sen!2sbd!4v1619452993813!5m2!1sen!2sbd" allowfullscreen="" loading="lazy"></iframe> </div> <br><br>
 			
 			
+			
+			
+			<div align="center" class="all_address copy_right1">
+				
+				<div class="devider_white"> </div>
+			<p class="copy_right"> Copyright &copy; <script>document.write(new Date().getFullYear())</script> Tfsons Group || Developed by NeuroSoft It Sollution</p>
+			</div>
+			
+			<br>
+			<br>
+			<br>
 		
 	</div></div> <!-----footer div end-->
 	
@@ -363,4 +374,4 @@
 	
 
 </body>
-</html>>>>>
+</html>
