--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 	<!------------------------banner------------------------->
 	
 	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
-	<div data-aos="fade-down" id="wowslider-container1">
+	<div style="z-index: 0;" data-aos="fade-down" id="wowslider-container1">
 	<div class="ws_images"><ul>
 		<li><img src="data1/images/1.png" alt="1" title="1" id="wows1_0"/></li>
 		<li><img src="data1/images/2.png" alt="2" title="2" id="wows1_1"/></li>
