--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<link rel="shortcut icon" type="image/x-icon" href="img/ico.png">
     <meta charset="utf-8">
     <meta name="description" content="পছন্দ আপনার দায়িত্ব আমাদের">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+	
     <!-- CSS here -->
 	<script src="js/animation.js"></script>
 	
@@ -150,11 +152,11 @@
 	<!------------------------banner------------------------->
 	
 	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
-	<div style="z-index: 0;" data-aos="fade-down" id="wowslider-container1">
+	<div data-aos="fade-down" style="z-index: 0;" id="wowslider-container1">
 	<div class="ws_images"><ul>
 		<li><img src="data1/images/1.png" alt="1" title="1" id="wows1_0"/></li>
 		<li><img src="data1/images/2.png" alt="2" title="2" id="wows1_1"/></li>
-		<li><a href="http://wowslider.net"><img src="data1/images/3.png" alt="responsive slider" title="3" id="wows1_2"/></a></li>
+		<li><a href="http://wowslider.net"><img src="data1/images/3.png" alt="bootstrap slider" title="3" id="wows1_2"/></a></li>
 		<li><img src="data1/images/4.png" alt="4" title="4" id="wows1_3"/></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
@@ -165,9 +167,11 @@
 	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">jquery carousel</a> by WOWSlider.com v9.0</div>
 	<div class="ws_shadow"></div>
 		
+		
 		<div data-aos="fade-right" class="details_number">
 			<img draggable="false" src="img/banner/details.png">
 		</div>
+		
 	</div>	
 	<script type="text/javascript" src="engine1/wowslider.js"></script>
 	<script type="text/javascript" src="engine1/script.js"></script>
@@ -184,7 +188,7 @@
 		
 		
 		<br>
-		<br>
+		
 		
 		
 	<!------------------------sub container------------------------->
