--- a/wow.html
+++ b/wow.html
@@ -11,14 +11,14 @@
 	<!-- End WOWSlider.com HEAD section -->
 
 </head>
-<body style="background-color:#d7d7d7;margin:0">
+<body style="background-color:#d7d7d7;margin:auto">
 	
 	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 	<div id="wowslider-container1">
 	<div class="ws_images"><ul>
 		<li><img src="data1/images/1.png" alt="1" title="1" id="wows1_0"/></li>
 		<li><img src="data1/images/2.png" alt="2" title="2" id="wows1_1"/></li>
-		<li><a href="http://wowslider.net"><img src="data1/images/3.png" alt="responsive slider" title="3" id="wows1_2"/></a></li>
+		<li><a href="http://wowslider.net"><img src="data1/images/3.png" alt="bootstrap slider" title="3" id="wows1_2"/></a></li>
 		<li><img src="data1/images/4.png" alt="4" title="4" id="wows1_3"/></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
