--- a/index.html
+++ b/index.html
@@ -151,21 +151,22 @@
 	<div align="center" class="container"><br>	
 	<!------------------------banner------------------------->
 	
-	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
+	
 	<div data-aos="fade-down" style="z-index: 0;" id="wowslider-container1">
 	<div class="ws_images"><ul>
 		<li><img src="data1/images/1.png" alt="1" title="1" id="wows1_0"/></li>
 		<li><img src="data1/images/2.png" alt="2" title="2" id="wows1_1"/></li>
-		<li><a href="http://wowslider.net"><img src="data1/images/3.png" alt="bootstrap slider" title="3" id="wows1_2"/></a></li>
+		<li><img src="data1/images/3.png" alt="3" title="3" id="wows1_2"/></li>
 		<li><img src="data1/images/4.png" alt="4" title="4" id="wows1_3"/></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
-		<a href="#" title="1"><span><img src="data1/tooltips/1.png" alt="1"/>1</span></a>
-		<a href="#" title="2"><span><img src="data1/tooltips/2.png" alt="2"/>2</span></a>
-		<a href="#" title="3"><span><img src="data1/tooltips/3.png" alt="3"/>3</span></a>
-		<a href="#" title="4"><span><img src="data1/tooltips/4.png" alt="4"/>4</span></a>
-	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">jquery carousel</a> by WOWSlider.com v9.0</div>
-	<div class="ws_shadow"></div>
+		<a href="#" title="1"><span></span></a>
+		<a href="#" title="2"><span></span></a>
+		<a href="#" title="3"><span></span></a>
+		<a href="#" title="4"><span></span></a>
+	</div></div>
+		
+	
 		
 		
 		<div data-aos="fade-right" class="details_number">
@@ -211,7 +212,7 @@
 
 		<div class="new_service_container">
 			
-			<div data-aos="fade-up" data-aos-duration="1000"><h1>Our Service</h1>
+			<div data-aos="fade-up" data-aos-duration="1000"><h1>Our Business</h1>
 			<div class="devider"></div></div>
 			
 			<div class="service_div_container">
@@ -461,4 +462,4 @@
   AOS.init();
 </script>
 </body>
-</html>>>>>>
+</html>>>>>>>>>>>
