--- a/index.html
+++ b/index.html
@@ -81,22 +81,21 @@
 			<div class="nav float_top_items">
 				<ul>
 					<li class="active"><i class="fa fa-home" aria-hidden="true"> </i> Home</li>
-					<li class=""><a href="#"> <i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
-					<li class=""><a href="#"><i class="fa fa-cogs" aria-hidden="true"></i> Service</a></li>
-					<li class=""><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i> Contact</a></li>
+					<li class=""><a href="about.html"> <i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
+					<li class=""><a href="service.html"><i class="fa fa-cogs" aria-hidden="true"></i> Service</a></li>
+					<li class=""><a href="contact.html"><i class="fa fa-map-marker" aria-hidden="true"></i> Contact</a></li>
 				</ul>
 			</div>
 			  
 			
 			
 			<!-- social start -->
-			
 			<br>
 			<div class="top_social float_top_item">
 			<a href="https://facebook.com/tfsonsonlineshop" target="_blank"><i class="fb fa fa-facebook-square"></i></a>
 			
 			<a href="https://wa.me/+8801842394106" target="_blank"><i class= "wt fa fa-whatsapp"></i></a>
-			<a href="mailto: tfsonscustomercare@gmail.com? subject = massage " target="_blank"><i class="ma fa fa-envelope"></i></a>
+			<a href="mailto: tfsonscustomercare@gmail.com? subject = massage " target="_blank"><i class="ma fa fa-envelope-open-o"></i></a>
 			<a href="https://youtube.com/channel/UCGNIbAGZm6UHcfSMgtjYg3g" target="_blank"><i class="yt fa fa-youtube-play"></i></a>
 			</div>
 			
@@ -108,16 +107,15 @@
 	
 	
 	
-	
 	<!---------------bottom nav--------------- -->
 	
 	<bottom id="bottom" align="center" class="bottom_nav_align">
 		<div align="center" class="bottom_nav float_top_items">
 				<ul>
 					<li class="active">&nbsp;&nbsp;<i class="fa fa-home" aria-hidden="true"> </i> Home&nbsp;&nbsp; </li>
-					<a href="#"><li class="">&nbsp;&nbsp;<i class="fa fa-info-circle" aria-hidden="true"> About&nbsp;&nbsp;</i></li></a>
-					<a href="#"><li class=""><i class="fa fa-cogs" aria-hidden="true"></i> Service</li></a>
-					<a href="#"><li class="">&nbsp;<i class="fa fa-map-marker" aria-hidden="true"></i> Contact&nbsp;</li></a>
+					<a href="about.html"><li class="">&nbsp;&nbsp;<i class="fa fa-info-circle" aria-hidden="true"> About&nbsp;&nbsp;</i></li></a>
+					<a href="service.html"><li class=""><i class="fa fa-cogs" aria-hidden="true"></i> Service</li></a>
+					<a href="contact.html"><li class="">&nbsp;<i class="fa fa-map-marker" aria-hidden="true"></i> Contact&nbsp;</li></a>
 				</ul>
 			</div>
 
@@ -427,14 +425,66 @@
 	<div class="sub_container">
 		
 		
-			<div data-aos="zoom-out-down"  align="center" class="about_home">
 		
-		<h1 align="center"> About us </h1>
-		<div class="devider"></div>
-		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard . . . . . . </p>
-	<div align="center" class="btn_a"><a href="#" class="btn hero-btn"> <font color="white">Read More</font></a></div>
-	</div><br><br>
+		
+		
+		
+		
+		
+		
+		<div data-aos="zoom-out-up" align="center" class="about_home">
+				<h1 align="center"> Admins and Members </h1>
+				<div class="devider"></div>
+			</div><br>
+		
+		
+		<div class="pc_admin">
+			<div class="phone_admin">
+				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/1.png">
+				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/3.png">
+				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/3.png">
+			</div>		
+		
+		<div data-aos="zoom-out-right" align="center" class="btn_a"><a href="about.html" class="btn hero-btn"> <font color="white">Read More</font></a></div>
+		</div>
+		
+		<br>
+		<br>
+		<div class="devider_silver"></div>
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+					<div data-aos="zoom-out-up"  align="center" class="about_home">
+
+						<h1 align="center"> About us </h1>
+						<div class="devider"></div>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard... <a style="color: #F66668;" href="about.html" class="read_more">Read more</a></p> 
+					</div><br><br>
 	
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
 		
 		</div>	<!-----sub container div end-->
 		
