--- a/contact.html
+++ b/contact.html
@@ -240,7 +240,7 @@
 			
 			<div class="devider_white"> </div>
 			
-			<p class="copy_right"> Copyright &copy; <script>document.write(new Date().getFullYear())</script> Tfsons Group || Developed by NeuroSoft It Sollution</p>
+			<p class="copy_right"> Copyright &copy; <script>document.write(new Date().getFullYear())</script> TFsons Group || Developed by NeuroSoft It Sollution</p>
 		
 		<div class="devider_white"> </div>
 
