--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
 			<div align="center" class="all_address copy_right1">
 				
 				<div class="devider_white"> </div>
-			<p class="copy_right"> Copyright &copy; <script>document.write(new Date().getFullYear())</script> Tfsons Group || Developed by NeuroSoft It Sollution</p>
+			<p class="copy_right"> Copyright &copy; <script>document.write(new Date().getFullYear())</script> TFsons Group || Developed by NeuroSoft It Sollution</p>
 			</div>
 			
 			<br>
