--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 				<div class="service_inner">
 					<i style="font-size: 50px; margin-bottom: 3px;" class="fa fa-home"></i>
 					<h2>TFsons Agro farm</h2>
-						<p class="service_p">Agro farming-Production, Distribution & sell.</p>
+						<p class="service_p">Argo farming-Production, Distribution & sell.</p>
 					<div class="button2">Click to see <i class="fa fa-arrow-circle-o-right"></i></div>
 				</div>
 			</div>
@@ -334,7 +334,7 @@
 			<div class="phone_sevice_div" data-aos="flip-down" >
 				<div class="phone_service_inner">
 					<i class="fa fa-home"></i>
-					<h2>TFsons Agro farm</h2>
+					<h2>TFsons Argo farm</h2>
 				</div>
 			</div>
 			
