--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
 				<ul>
 					<li class=""><a href="index.html"><i class="fa fa-home" aria-hidden="true"> </i> Home</a></li>
 					<li class=""><a href="about.html"> <i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
-					<li class=""><a href="service"><i class="fa fa-cogs" aria-hidden="true"></i> Service</a></li>
+					<li class=""><a href="service.html"><i class="fa fa-cogs" aria-hidden="true"></i> Service</a></li>
 					<li class="active"><i class="fa fa-map-marker" aria-hidden="true"></i> Contact</li>
 				</ul>
 			</div>
