--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 	
     <!-- CSS here -->
-	<script src="js/animation.js"></script>
 	
 	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
 	<script type="text/javascript" src="engine1/jquery.js"></script>
@@ -228,7 +227,7 @@
 			<div class="new_sevice_div" data-aos="flip-down" >
 				<div class="service_inner">
 					<i style="font-size: 50px; margin-bottom: 3px;" class="fa fa-home"></i>
-					<h2>TFsons Agro farm</h2>
+					<h2>TFsons Agro</h2>
 						<p class="service_p">Argo farming-Production, Distribution & sell.</p>
 					<div class="button2">Click to see <i class="fa fa-arrow-circle-o-right"></i></div>
 				</div>
@@ -600,4 +599,4 @@
   AOS.init();
 </script>
 </body>
-</html>
+</html>>>
