--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
 		
 		<!-- head start -->
 		<div class="top_header">
-			<div class="logo float_top_items"><a href="#"><img src="img/logo/logo.png"></a></div>
+			<div class="logo float_top_items"><a href="index.html"><img src="img/logo/logo.png"></a></div>
 			
 			
 			<!-- navigation start -->
