--- a/our_business/exportimport/exportimport_posting.html
+++ b/our_business/exportimport/exportimport_posting.html
@@ -47,14 +47,14 @@
 		<div class="Hdesignred topcoloralign"></div>
 		<!-- head start -->
 		<div class="top_header">
-			<div class="logo float_top_items"><a href="#"><img src="img/logo/logo.png"></a></div>
+			<div class="logo float_top_items"><a href="../../index.html"><img src="../../img/logo/logo.png"></a></div>
 			<!-- navigation start -->
 			<div class="nav float_top_items">
 				<ul>
-					<li class=""><a href="index.html"><i class="fa fa-home" aria-hidden="true"> </i> Home</a></li>
-					<li class=""><a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
+					<li class=""><a href="../../index.html"><i class="fa fa-home" aria-hidden="true"> </i> Home</a></li>
+					<li class=""><a href="../../about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a></li>
 					<li class="active"><i class="fa fa-cogs" aria-hidden="true"></i> Service</li>
-					<li class=""><a href="contact.html"><i class="fa fa-map-marker" aria-hidden="true"></i> Contact</a></li>
+					<li class=""><a href="../../contact.html"><i class="fa fa-map-marker" aria-hidden="true"></i> Contact</a></li>
 				</ul>
 			</div>
 			<br>
@@ -69,10 +69,10 @@
 	<bottom id="bottom" align="center" class="bottom_nav_align">
 		<div align="center" class="bottom_nav float_top_items">
 				<ul>
-					<a href="index.html"><li class="">&nbsp;&nbsp;<i class="fa fa-home" aria-hidden="true"> </i> Home&nbsp;&nbsp;</li><a/>
-					<a href="about.html"><li class="">&nbsp;&nbsp;<i class="fa fa-info-circle" aria-hidden="true"></i> About&nbsp;&nbsp;</li></a>
+					<a href="../../index.html"><li class="">&nbsp;&nbsp;<i class="fa fa-home" aria-hidden="true"> </i> Home&nbsp;&nbsp;</li><a/>
+					<a href="../../about.html"><li class="">&nbsp;&nbsp;<i class="fa fa-info-circle" aria-hidden="true"></i> About&nbsp;&nbsp;</li></a>
 					<li class="active"><i class="fa fa-cogs" aria-hidden="true"></i> Service</li>
-					<a href="contact.html"><li class="">&nbsp;<i class="fa fa-map-marker" aria-hidden="true"></i> Contact&nbsp;</li></a>
+					<a href="../../contact.html"><li class="">&nbsp;<i class="fa fa-map-marker" aria-hidden="true"></i> Contact&nbsp;</li></a>
 				</ul>
 			</div>
 	</bottom>
@@ -84,12 +84,13 @@
 	<div align="center" class="container"><br>	
 	<!------------------------sub container------------------------->	
 	<div class="sub_container">
-		<a href="service.html"><div class="back_service" ><i class="fa fa-arrow-circle-left"></i> See All Business</div></a>	
+		<a href="../../service.html"><div data-aos="zoom-out-left" class="back_service" ><i class="fa fa-arrow-circle-left"></i> See All Business</div></a>
+		<br>	
+		<a href="https://www.etfsons.com"><div data-aos="zoom-out-right" class="back_service" > Buy Products <i class="fa fa-arrow-circle-right"></i></div></a>	
 		<br>
 
-		<div data-aos="fade-up" data-aos-duration="1000"><h1>TFsons Furniture</h1>
+		<div data-aos="fade-up" data-aos-duration="1000"><h4>TFsons Export & Import</h4>
 			<div class="devider"></div></div>
-		<br>
 		<br>
 		<br>
 <div align="center" class="product pc_admin">
@@ -162,8 +163,43 @@
 	
 	
 	
-<a href=""><img  src="1.jpg"><h3>product name</h3></a>	
-	
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="1.jpg"><h3>			</h3></a></div>	
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="2.jpg"><h3>			</h3></a></div>	
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="3.jpg"><h3>			</h3></a></div>	
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="4.jpg"><h3>			</h3></a></div>	
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="5.jpg"><h3>			</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="6.jpg"><h3>			</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="7.jpg"><h3>			</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="8.jpg"><h3>			</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="9.jpg"><h3>			</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="11.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="12.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="13.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="14.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="15.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="16.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="17.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="18.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="19.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="21.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="22.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="23.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="24.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="25.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="26.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="27.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="30.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="31.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="32.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="33.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="34.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="35.jpg"><h3>		</h3></a></div>
+	<div data-aos="zoom-out-up"><a href=""><img alt="" src="36.jpg"><h3>		</h3></a></div>
+
+
+
+
+
 			
 			
 			
@@ -275,4 +311,4 @@
 			</div>
 			
 			
-<br><br><br></div></div> <!-----footer div end--></div> <!-----main container div end-->	</body></html>>>>>
+<br><br><br></div></div> <!-----footer div end--></div> <!-----main container div end-->	</body></html>>>>>>>>>>>
