--- a/about.html
+++ b/about.html
@@ -148,24 +148,213 @@
 	<br>
 	<br>
 	<br>
-	<div align="center" class="container"><br>	
+	<div align="center" class="container"><br>
+
+<a href="about_bn.html"><div data-aos="" class="back_service" >Translate to Bangla <i class="fa fa-language"></i></div></a>
+		
 	<!------------------------sub container------------------------->	
 	<div class="sub_container">
+		<br>
 		
+		<div class="about">
+			
+			
 		
-					<div data-aos="zoom-out-down"  align="center" class="about_home">
-
-				<h1 align="center"> About Us </h1>
-				<div class="devider"></div>
-			</div><br>
-		<div  data-aos="fade-up">
-		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-		
-		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.  </p>
+		<div data-aos="zoom-out-up"  align="center" class="about_home">
+		<h1 align="center"> Full meanings of TFsons </h1>
+		<div class="devider"></div>
 		</div>
+		<br>
+		<div class="parah1"  data-aos="zoom-out-up">
+		<p style="text-align: left;">
+		<i class="fa fa-hand-o-right"></i> T for "Tofazzal Hossain" (Father of "sons") That's means, everyone's own Father.<br>
+		<i class="fa fa-hand-o-right"></i> F for "Fatema Begum" (Mother of "sons") That's means, everyone's own Mother.<br>
+		<i class="fa fa-hand-o-right"></i> "sons" for, Everyone  who, Connected with TFsons Group.<br>
+		</p>
+			
+		<p>TFsons Group always works for the people and the country. And represents Bangladesh to the world through their quality work and the brand color of the organization red and green.</p>
+			
+			
+		<p>TFsons Group<br>Made in Bangladesh</p>
 		
+		</div>
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			<br>
+			<div data-aos="zoom-out-up" class="devider_silver"></div> 
+			
+			
+			
+			
+			
+			
+			
+			
+			<div data-aos="fade-up"  align="center" class="about_home">
+		<h1 align="center"> About Us </h1>
+		<div class="devider"></div>
+		</div>
+		<br>
+
+			
+			
+			<div class="pc_admin"><img draggable="false" data-aos="fade-up" class="admin" src="img/member/1.png"></div>
+			<div class="parah1"  data-aos="fade-up">
+<p><strong>Tofazzal Hossain</strong><br> <strong>Founder & CEO of TFsons Group</strong></p>
+<p>After cutting the tree, the remaining roots are picked up and sold in the market.</p>
+<p>Gradually a capital of about 800 BDT was created and with that capital Tofazzal Hossain dared to buy a whole grass.</p>
+<p>This is how Tofazzal Hossain's business journey started.It was 1988.</p>
+<p>One to two, two to three, so his business scope continues to grow day by day.</p>
+<p>Inside, he has suffered business losses many times.</p>
+<p>But he never looked back or let his morale break.</p>
+<p>The main principle of his business was honesty and with this honesty he was start growing his business day by day.</p>
+<p>In the year 1998 Tofazzal Hossain started his business also in furniture sector.</p>
+<p>His business was known day by day for his honesty and good manners and love for all his employees.</p>
+<p>In 2010 Mr. Tofazzal Hossain decided to start business in the agro farm sector with the aim of expanding his business.And started a poultry farm business at the same time.</p>
+<p>His Poultry Farm has suffered huge losses in just a few years of its business due to a terrible virus.</p>
+<p>But he did not stop. He started poultry farming business from the beginning.</p>
+<p><br />The number of products in each of his sectors is increasing day by day.And the number of species in the agro farming sector is increasing always.</p>
+<p>Now his sons are getting involved in the business.</p>
+<p>His sons are exploring new business fields with the aim of further expanding the "TFsons Group" as well as the father through honesty, trustworthiness and good behavior.</p>
+<p>TFsons Care about people,about society,about country, about world.</p>
+<p><span style="color: #e03e2d;"><strong>TFsons Group&nbsp;</strong></span><br /><strong>Made in Bangladesh</strong></p>
+	
+			</div>
+			
+			
+			
+			
+			
+			
+			
+		
+		
+			<br><div class="devider_silver"></div>
+			
+			
+			
+			
+			
+			
+			
+			
+			
+	<div class="pc_admin"><img draggable="false" data-aos="fade-up" class="admin" src="img/member/3.png"></div>	
+	<div class="parah1"  data-aos="fade-up">
+<p><strong>Dr. Sharif Hossain</strong><br /><strong>Co-Founder of eTFsons.com</strong></p>
+<p><br />As well as school, college and medical studies, business thoughts were always on mind.</p>
+<p>There was tuition but the thought of business forced him to start a business.</p>
+<p>This is how the business journey of the present MBBS Doctor Sharif Hossain started before he became a doctor.</p>
+<p>Although his life dream was both business and doctor.</p>
+<p>So he chose human service as his life goal and he is now a government medical doctor.</p>
+<p>Although he is a very important person in the TFsons Group, he is not active in the business for the sake of his job.</p>
+<p>TFsons Group verry proud for Doctor Sharif Hossain.</p>
+<p>TFsons Care about people, about society, about country, about world.</p>
+<p><span style="color: #e03e2d;"><strong>TFsons Group&nbsp;</strong></span><br /><strong>Made in Bangladesh</strong></p>
+	
+			</div>		
+		
+			
+			
+			
+			
+
+			<br><div class="devider_silver"></div>
+			
+			
+			
+			
+			
+			<div class="pc_admin"><img draggable="false" data-aos="fade-up" class="admin" src="img/member/3.png"></div>
+			<div class="parah1"  data-aos="fade-up">
+<p><strong>Junayed Hossain Sumon</strong><br /><strong>Founder of Doctor's Care &amp; eTFsons.com</strong><br /><strong>CIO of TFsons Group</strong></p>
+<p>A current medical student, started his business career as the founder of a medical coaching center called "Doctor's Care".</p>
+<p>He have verry strong skill to take important business decisions in a very short period.</p>
+<p>He once set up an online shop called eTFsons.com to facilitate the distribution of agriculture products.</p>
+<p>Starting from there, now "eTFsons.com" is working with various products in Bangladesh. Their thoughts at international level.</p>
+<p>TFsons Care about people, about society, about country, about world.</p>
+<p><strong><span style="color: #e03e2d;">TFsons Group</span></strong><br /><strong>Made in Bangladesh</strong></p>
+			</div>	
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			<br><div class="devider_silver"></div>
+			
+			
+			
+			
+			
+			
+			
+			<div class="pc_admin"><img draggable="false" data-aos="fade-up" class="admin" src="img/member/4.png"></div>
+			<div class="parah1"  data-aos="fade-up">
+				
+<p><br /><strong>Inayet Hasan Sabbir</strong><br /><strong>COO of TFsons Group</strong><br /><strong>Co Founder of eTFsons.com</strong></p>
+<p>In school-college though there were science students.</p>
+<p>But his keen interest in business education forced him to pursue a business education. And he left science to pursue a career in business education.</p>
+<p>After getting admission in BBA, he started his business life by doing small business.</p>
+<p>Sometimes the business of buying and selling used materials.</p>
+<p>Then,he start a business selling clothes on the street with a little bit of capital.</p>
+<p>No task was ever too small for him.</p>
+<p>Although his business journey was not about making a living, it was only because, he was attracted to business.</p>
+<p>At one point he was involved in his father's business with the aim of helping his father.</p>
+<p>Then discovered "eTFsons.com".</p>
+<p>Then gradually the export-import business started.</p>
+<p>Now,he is total responsible for "TFsons Group"</p>
+<p>TFsons Care about people,about society,about country, about world.</p>
+<p><span style="color: #e03e2d;"><strong>TFsons Group&nbsp;</strong></span><br /><strong>Made in Bangladesh</strong></p>
+				
+			</div>
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+		
+			
+			
+			
 		<br>
 		<br>
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
 		
 	
 		
@@ -173,25 +362,22 @@
 		
 		
 		<div data-aos="zoom-out-up" align="center" class="about_home">
-				<h1 align="center"> Admins and Members </h1>
+				<h1 align="center"> Other Members </h1>
 				<div class="devider"></div>
 			</div><br>
 		
 		
 		<div class="pc_admin">
 			<div class="phone_admin">
-				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/1.png">
-				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/3.png">
-				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/3.png">
-				<div data-aos="fade-up" class="devider_silver2"></div>
-				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/2.png">
-				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/2.png">
-				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/2.png">
-				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/2.png">
-				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/2.png">
+								<img draggable="false" data-aos="fade-up" class="admin" src="img/member/5.png">
+				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/5.png">
+				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/5.png">
+				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/5.png">
 			</div>		
 		</div>
 		
+			
+			
 		
 		
 		
@@ -203,7 +389,7 @@
 		
 		
 		
-		
+		</div><!-----about div end-->
 		
 	</div>	<!-----sub container div end-->
 		
@@ -325,4 +511,4 @@
   AOS.init();
 </script>
 </body>
-</html>>>>>>
+</html>>>>>>>>>>
