--- a/index.html
+++ b/index.html
@@ -456,11 +456,12 @@
 		<div class="pc_admin">
 			<div class="phone_admin">
 				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/1.png">
+				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/2.png">
 				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/3.png">
-				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/3.png">
+				<img draggable="false" data-aos="fade-up" class="admin" src="img/member/4.png">
 			</div>		
 		
-		<div data-aos="zoom-out-right" align="center" class="btn_a"><a href="about.html" class="btn hero-btn"> <font color="white">Read More</font></a></div>
+		<div data-aos="zoom-out-right" align="center" class="btn_a"><a href="about.html" class="btn hero-btn"> <font color="white">Full Details</font></a></div>
 		</div>
 		
 		<br>
@@ -483,7 +484,7 @@
 						<h1 align="center"> About us </h1>
 						<div class="devider"></div>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard... <a style="color: #F66668;" href="about.html" class="read_more">Read more</a></p> 
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard... <a style="color: #F66668;" href="about.html" class="read_more">Read More</a></p> 
 					</div><br><br>
 	
 		
@@ -615,4 +616,4 @@
   AOS.init();
 </script>
 </body>
-</html>>>>>
+</html>>>>>>
