--- a/service.html
+++ b/service.html
@@ -113,7 +113,7 @@
 		<div align="center" class="bottom_nav float_top_items">
 				<ul>
 					<a href="index.html"><li class="">&nbsp;&nbsp;<i class="fa fa-home" aria-hidden="true"> </i> Home&nbsp;&nbsp;</li><a/>
-					<a href="about.html"><li class="">&nbsp;&nbsp;<i class="fa fa-info-circle" aria-hidden="true"></i> Our Business&nbsp;&nbsp;</li></a>
+					<a href="about.html"><li class="">&nbsp;&nbsp;<i class="fa fa-info-circle" aria-hidden="true"></i> About&nbsp;&nbsp;</li></a>
 					<li class="active"><i class="fa fa-cogs" aria-hidden="true"></i> Service</li>
 					<a href="contact.html"><li class="">&nbsp;<i class="fa fa-map-marker" aria-hidden="true"></i> Contact&nbsp;</li></a>
 				</ul>
