--- a/about.html
+++ b/about.html
@@ -150,11 +150,60 @@
 	<br>
 	<div align="center" class="container"><br>
 
-<a href="about_bn.html"><div data-aos="" class="back_service" >Translate to Bangla <i class="fa fa-language"></i></div></a>
+<a href="#"><div data-aos="" class="back_service" ><div id="google_translate_element"></div> </div></a>
 		
 	<!------------------------sub container------------------------->	
 	<div class="sub_container">
 		<br>
+
+
+
+
+
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 		
 		<div class="about">
 			
@@ -167,8 +216,8 @@
 		<br>
 		<div class="parah1"  data-aos="zoom-out-up">
 		<p style="text-align: left;">
-		<i class="fa fa-hand-o-right"></i> T for "Tofazzal Hossain" (Father of "sons") That's means, everyone's own Father.<br>
-		<i class="fa fa-hand-o-right"></i> F for "Fatema Begum" (Mother of "sons") That's means, everyone's own Mother.<br>
+		<i class="fa fa-hand-o-right"></i> "T" for "Tofazzal Hossain" (Father of "sons") That's means, everyone's own Father.<br>
+		<i class="fa fa-hand-o-right"></i> "F" for "Fatema Begum" (Mother of "sons") That's means, everyone's own Mother.<br>
 		<i class="fa fa-hand-o-right"></i> "sons" for, Everyone  who, Connected with TFsons Group.<br>
 		</p>
 			
@@ -248,7 +297,7 @@
 			
 			
 			
-	<div class="pc_admin"><img draggable="false" data-aos="fade-up" class="admin" src="img/member/3.png"></div>	
+	<div class="pc_admin"><img draggable="false" data-aos="fade-up" class="admin" src="img/member/2.png"></div>	
 	<div class="parah1"  data-aos="fade-up">
 <p><strong>Dr. Sharif Hossain</strong><br /><strong>Co-Founder of eTFsons.com</strong></p>
 <p><br />As well as school, college and medical studies, business thoughts were always on mind.</p>
