--- a/index.html
+++ b/index.html
@@ -483,8 +483,7 @@
 
 						<h1 align="center"> About us </h1>
 						<div class="devider"></div>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard... <a style="color: #F66668;" href="about.html" class="read_more">Read More</a></p> 
+						<p>TFsons Group always works for the people and the country. And represents Bangladesh to the world through their quality work and the brand color of the organization red and green...<a style="color: #F66668;" href="about.html" class="read_more">Read More</a></p> 
 					</div><br><br>
 	
 		
